--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@vue/cli-plugin-e2e-cypress": "^3.0.0-rc.10",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
     "@vue/cli-service": "^3.0.0-rc.10",
+    "bootstrap": "^4.1.3",
+    "echarts": "^4.1.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "vue-template-compiler": "^2.5.16"
   }
 }
