--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-service": "^3.0.0-rc.10",
     "bootstrap": "^4.1.3",
     "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "echarts": "^4.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
